--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -41,14 +41,29 @@
     <ion-header-bar align-title="left" class="bar-dark">
 
       <h4 class="title text-center" style="color: white">Main Menu</h4>
+      <h4 ng-if="$root.user" style="color: white; margin-left: 50%; font-size: 15px;">Welcome, {{$root.user.firstname}}</h4>
 
     </ion-header-bar>
     <ion-content class="top-44 back-dark">
       <ion-list class="max-height">
         <ion-item class="item" menu-close="" ui-sref="AboutUs">
           <h2 class="color-white">
-            <i class="fa fa-info pull-left fa-padding-left-fix" aria-hidden="true"></i>
+            <i class="fa fa-info-circle pull-left fa-padding-left-fix" aria-hidden="true"></i>
             About Us
+          </h2>
+        </ion-item>
+
+        <ion-item class="item" menu-close="" ui-sref="Contact">
+          <h2 class="color-white">
+            <i class="fa fa-info pull-left fa-padding-left-fix" aria-hidden="true"></i>
+            Contact Us
+          </h2>
+        </ion-item>
+
+        <ion-item class="item" menu-close="" ui-sref="AllEmployees">
+          <h2 class="color-white">
+            <i class="fa fa-users pull-left fa-padding-left-fix" aria-hidden="true"></i>
+            All Employees
           </h2>
         </ion-item>
 
@@ -66,7 +81,7 @@
     <button ng-if="$root.user" menu-close="" class="button button-full button-full-fix button-assertive color-white sidemenu-button" ng-click="$root.logout();">
       Logout
     </button>
-    <button ng-if="!$root.user" menu-close="" class="button button-full button-full-fix button-balanced color-white sidemenu-button" ui-sref="Login">
+    <button ng-if="!$root.user" menu-close="" class="button button-full button-full-fix button-balanced color-white sidemenu-button" ng-click="$root.checkAdmin()">
       Login
     </button>
   </ion-side-menu>
@@ -86,6 +101,7 @@
 <script src="bower_components/angular-timeago/dist/angular-timeago.min.js"></script>
 <script src="bower_components/satellizer/dist/satellizer.min.js"></script>
 <script src="bower_components/ngOpenFB/ngOpenFB.min.js"></script>
+<script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
 <!-- endbuild -->
 
 
@@ -96,7 +112,15 @@
 <script src="src/login/login.module.js"></script>
 <script src="src/Signup/Signup.module.js"></script>
 <script src="src/AboutUs/AboutUs.module.js"></script>
+<script src="src/Contact/Contact.module.js"></script>
+<script src="src/Employee/Employee.module.js"></script>
+<script src="src/common/formatDuration.filter.js"></script>
+<script src="src/NewEmployee/NewEmployee.module.js"></script>
+<script src="src/EmployeeProfile/EmployeeProfile.module.js"></script>
+<script src="src/AllEmployees/AllEmployees.module.js"></script>
+<script src="src/editEmployee/editEmployee.module.js"></script>
 <script src="src/app.module.js"></script>
+<script src='src/core/httpinterceptors.config.js'></script>
 <script src="src/core/restangular.config.js"></script>
 <script src="src/core/router.config.js"></script>
 <script src="src/core/httpStatus.constant.js"></script>
@@ -107,6 +131,14 @@
 <script src="src/Signup/signup.controller.js"></script>
 <script src="src/AboutUs/aboutus.controller.js"></script>
 <script src="src/core/satellizer.config.js"></script>
+<script src="src/Contact/contact.controller.js"></script>
+<script src="src/core/api.constant.js"></script>
+<script src="src/common/dataService.factory.js"></script>
+<script src="src/Employee/employee.controller.js"></script>
+<script src="src/NewEmployee/newemployee.controller.js"></script>
+<script src="src/EmployeeProfile/employeeprofile.controller.js"></script>
+<script src="src/AllEmployees/allemployees.controller.js"></script>
+<script src="src/editEmployee/editemployee.controller.js"></script>
 <!-- endbuild -->
 
 </html>
